# about

./: 404.html  CNAME  README.md  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.htm  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: init_mkdocs.yml
Projects/: index.html
Projects/posts/Sound_Demixing/: index.html
Projects/posts/bengali_graphemes_detection/: index.html
Projects/posts/denoising_diffusion_audio_models/: index.html
Projects/posts/investigating_semantic_roles/: index.html
Projects/posts/rate_severity_of_toxic_content/: index.html
blog/: first.html  index.html
blog/archive/2018/: index.html
blog/archive/2022/: index.html
blog/archive/2023/: index.html
blog/category/audio/: index.html
blog/category/competitions/: index.html
blog/category/research/: index.html
blog/category/text/: index.html
blog/category/vision/: index.html
css/: mycss.css  styles.css
docs/: index.md
docs/Projects/: .authors.yml  bengali_graphemes.md  denoising_diffusion.md  index.md  semantic_roles.md
docs/Projects/posts/: Sound_Demixing.md  bengali_graphemes_detection.md  denoising_diffusion_audio_models.md  investigating_semantic_roles.md  rate_severity_of_toxic_content.md
docs/blog/: .authors.yml
docs/blog/posts/: bengali_graphemes_detection.md  denoising_diffusion_audio_models.md  investigating_semantic_roles.md  (+2 more)
docs/blog_oldie/: index.md
images/: backdrop.psd
js/: animation.js
my_work/: index.htm
search/: search_index.json
test1/: index.md
(+7 files in other folders)
