[project]
name = "about-me-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mkdocs-material~=9.5.46",
    "mkdocs>=1.6.1",
    "jinja2~=3.0",
    "markdown~=3.2",
    "mkdocs-material-extensions~=1.3",
    "pygments~=2.16",
    "pymdown-extensions~=10.2",
    "babel~=2.10",
    "colorama~=0.4",
    "paginate~=0.5",
    "regex>=2024.11.6",
    "requests~=2.26",
    "mkdocs-glightbox~=0.4.0",
    "mkdocs-get-deps~=0.2.0",
    "mkdocs-minify-plugin~=0.8.0",
    "mkdocs-git-committers-plugin-2~=2.4.1",
    "mkdocs-git-revision-date-localized-plugin~=1.3.0",
    "mkdocs-rss-plugin==1.16.0",
]
